Add poem to index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
       <img src="imagens/imagem09.webp" alt="img09">
       <img src="imagens/imagem10.webp" alt="img10">
       <p>Feliz aniversário!</p>
+      <p>Amo-te tanto, meu amor
+       Não cante o humano coração com mais verdade
+       Amo-te como amigo e como amante
+       Numa sempre diversa realidade</p>
       <audio src="musicas/Billy Joel - Vienna (Official Video) - billyjoelVEVO (youtube).mp3" controls></audio>
     </div>
 
